fix: resolve production cors issue